Prevent wordwrap on heading

--- a/src/index.scss
+++ b/src/index.scss
@@ -94,6 +94,7 @@ h1 {
   margin: 0 0 $small-font-size;
   text-align: center;
   text-transform: uppercase;
+  white-space: nowrap;
 
   #emoji {
     display: inline-block;
